--- a/requirements.txt
+++ b/requirements.txt
@@ -32,3 +32,4 @@ sqlalchemy==1.4.19
 urllib3==1.26.7; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4' and python_version < '4'
 werkzeug==2.0.1
 wtforms==2.3.3
+email_validator==1.1.3
